# item_matching

./: .gitignore  LICENSE  README.md  pyproject.toml
benchmark/: autofaiss.ipynb  data_load.py  milvus.ipynb
examples/: embed_bge.ipynb  embed_bge_rerank.ipynb  embed_bge_v2.ipynb  embed_clip.ipynb  embed_tfidf.ipynb  func.py
notebooks/benchmark/: data_load.py  database.py  model.py
notebooks/benchmark/notebooks/: report.ipynb
notebooks/benchmark_database/: data_load.py  database.py  model.py
notebooks/benchmark_database/notebooks/: autofaiss.ipynb  milvus.ipynb  report.ipynb  vicinity.ipynb
notebooks/benchmark_model/: create_embed.py  create_img_embed.py  create_index.py  create_text_embed.py  eda_rerank.ipynb  embed_bge.ipynb  embed_bge_gemma.ipynb  embed_bge_rerank.ipynb  embed_compass.ipynb  embed_img_compare.ipynb  embed_siglip.ipynb  embed_text_compare.ipynb  func.py  grounding_images.ipynb
notebooks/data/: brand.py  create_embed.py  data.sql  data_stats.py  download.py  download_images.py
notebooks/examples/: embed_bge_v2.ipynb  embed_jina.ipynb  embed_siglip.ipynb  func.py  mmol.ipynb  qwen.ipynb  qwen_load_data.ipynb  qwen_model.py  qwen_report.ipynb  qwen_summarize.py  qwen_vl-Copy1.ipynb
notebooks/examples/model_try/: embed_bge_v2.ipynb  embed_clip.ipynb  embed_jina.ipynb  embed_siglip.ipynb
notebooks/examples/qwen_collection/: qwen.ipynb  qwen_load_data.ipynb  qwen_mlx.py  qwen_model.py  qwen_report_test.ipynb  qwen_search.py  qwen_summarize.py  qwen_vllm.ipynb  qwen_vllm.py  test.ipynb
notebooks/test_func/: download_images.py  download_test_data.py  load_json.py
src/item_matching/: README.md  __init__.py  adhoc.py  main.py  main_1.py  main_2.py  main_match.py  main_v2.py
src/item_matching/build_index/: build_index_and_query.py  data_loading.py  func.py  func_img.py  function_image.py  matching.py  model.py
src/item_matching/func/: check_brand.py  function_image.py  function_text.py  post_processing.py  utilities.py  validation.py
src/item_matching/milvus_db/: db.py
src/item_matching/model/: model.py
src/item_matching/pipeline/: build_index_and_query.py  build_index_and_query_v2.py  data_loading.py  data_loading_v2.py  func.py  rerank.py
test/: download_images.py  load_json.py  match.py  match_img.py  match_text_by_df.py  match_text_by_path.py  test.py
