[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "item_matching"
version = "0.0.51"
authors = [
  { name="Kevin Khang", email="kevinkhang2909@gmail.com" },
]
description = "A name matching package"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ["semantic, retrieval"]
dependencies = [
    'tqdm',
    'pyarrow',
    'duckdb',
    'polars',
    'transformers',
    'torch',
    'autofaiss',
    'loguru',
    'datasets',
    'scikit-learn',
    'FlagEmbedding',
    'orjson',
    'sentencepiece',
    'img2dataset',
]

[project.urls]
"Homepage" = "https://github.com/kevinkhang2909/item_matching"
"Bug Tracker" = "https://github.com/kevinkhang2909/item_matching/issues"
