[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "item_matching"
version = "0.0.97"
authors = [
  { name="Kevin Khang", email="kevinkhang2909@gmail.com" },
]
description = "A name matching package"
readme = "README.md"
requires-python = ">=3.12"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ["semantic, retrieval"]
dependencies = [
    'matplotlib',
    'emoji',
    'pyarrow',
    'duckdb',
    'polars',
    'transformers',
    'torch',
    'autofaiss',
    'datasets',
    'scikit-learn',
    'FlagEmbedding',
    'sentencepiece',
    'peft',
    'einops',
    'albumentations',
]

[project.urls]
"Homepage" = "https://github.com/kevinkhang2909/item_matching"
"Bug Tracker" = "https://github.com/kevinkhang2909/item_matching/issues"
